@@ -17,6 +17,7 @@
       <menuitem name="HorizontalFlip" action="ViewHorizontalFlip" />
       <menuitem name="VerticalFlip" action="ViewVerticalFlip" />
       <menuitem name="CrossHair" action="ViewCrossHair" />
+      <menuitem name="Pixel-grid" action="ViewPixelGrid" />
       <menuitem name="ColorMapBar" action="ViewColorMap" />
       <menuitem name="AutoResize" action="AutoResize" />
       <menuitem name="AutoContrast" action="AutoContrast" />
