@@ -1,6 +1,16 @@
+2011-10-30  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * giv-win.gob, giv-widget.gob : Added support for pixel grid.
+
+2011-10-29  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * giv-win.gob : On auto-reload make image read failures silently ignored.
+
+        * giv-win.gob : Fixed bug that overlay was exported even if mark view was off.
+
 2011-09-25  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
-        * GivRenderer.gob : Temporary fix for clipping error. 
+        * GivRenderer.gob : Temporary fix for clipping error.
 
         * giv-win.gob, giv-parser.gob : Added tool for counting marks in rectangle.
 
